新增获取cookie配置

--- a/my_quantumult_pro.conf
+++ b/my_quantumult_pro.conf
@@ -236,7 +236,7 @@ https:\/\/api.bilibili.com\/pgc\/view\/app\/season url 302 http://api.bili.best/
 
 # > 中青看点极速版 (By @Macsuny)
 # 进入app，签到一次,即可获取Cookie
-50 8 * * * nzw9314/Task/youth.js, tag=中青看点签到, enabled=true
+50 8 * * * Sunert/Task/youth.js, tag=中青看点签到, enabled=true
 
 # 快手极速版 (By @Macsuny)
 #APP登陆账号后，点击’钱包’
