中青增加转盘双倍奖励

--- a/My_Get_Cookie_New.conf
+++ b/My_Get_Cookie_New.conf
@@ -262,6 +262,7 @@ https:\/\/newsapi\.sina\.cn\/\?resource=userpoint\/signIn url script-request-hea
 https:\/\/kd\.youth\.cn\/TaskCenter\/sign url script-request-header Sunert/Task/youth.js
 https?:\/\/ios\.baertt\.com\/v5\/article\/complete url script-request-body Sunert/Task/youth.js
 https?:\/\/ios\.baertt\.com\/v5\/Game\/GameVideoReward url script-request-body Sunert/Task/youth.js
+https:\/\/ios\.baertt\.com\/v5\/article\/red_packet url script-request-body Sunert/Task/youth.js
 
 # 楼兰小说论坛 (By @iNotification)
 ^https:\/\/www\.lltxt\.com/hack\.php\?H_name=qiandao&action=qiandao url script-request-header nzw9314/Task/loulancheck.js
