更改米读获取cookie路径

--- a/My_Get_Cookie_New.conf
+++ b/My_Get_Cookie_New.conf
@@ -194,8 +194,8 @@ https:\/\/www.maomicd.com\/plugin.php\?id=k_misign:sign&operation=qiandao url sc
 ^https:\/\/api\.1sapp\.com\/content\/readV2? url script-request-header nzw9314/chavyleung/qtt/qtt.cookie.js
 ^https:\/\/api\.1sapp\.com\/x\/feed\/getReward? url script-request-header nzw9314/chavyleung/qtt/qtt.cookie.js
 
-# 米读
-^https:\/\/apiwz\.midukanshu\.com url script-request-body nzw9314/chavyleung/midu/midu.cookie.js
+# 米读极速版 
+^https:\/\/apiwz\.midukanshu\.com url script-request-body chavyleung/midu/midu.cookie.js
 
 # 多看
 ^https:\/\/www\.duokan\.com\/checkin\/v0\/status url script-request-body nzw9314/chavyleung/duokan/duokan.cookie.js
