修改快手和来客有利路径

--- a/My_Get_Cookie_New.conf
+++ b/My_Get_Cookie_New.conf
@@ -227,14 +227,15 @@ https:\/\/m\.ctrip\.com\/restapi\/soa2\/14946\/json\/userBaseInfo url script-req
 # 微信小程序-同程艺龙 (By @barrymchen)
 ^https:\/\/wx\.17u\.cn\/wcsign\/sign\/GetSignInfo url script-request-body nzw9314/Task/tongc_cookie.js
 
-# 快手极速版 (By @Macsuny)
-https:\/\/nebula\.kuaishou\.com\/rest\/n\/nebula\/activity\/earn\/overview url script-request-header nzw9314/Task/kuaishou.js
+# 快手极速版 (By @Sunert)
+https:\/\/nebula\.kuaishou\.com\/rest\/n\/nebula\/activity\/earn\/overview url script-request-header Sunert/Task/kuaishou.js
+
 
 # 京东到家 (By @barrymchen, @GideonSenku & @Macsuny)
 https:\/\/daojia\.jd\.com\/client\?_jdrandom=\d{13}&functionId=%2Fsignin url script-request-header nzw9314/Task/jddj.js
 
-# 微信小程序-来客有礼 (By @Macsuny)
-https:\/\/draw\.jdfcloud\.com\/\/api\/bean\/square\/silverBean\/task\/get\? url script-request-header nzw9314/Task/lkyl.js
+# 微信小程序-来客有礼 (By @Sunert)
+https:\/\/draw\.jdfcloud\.com\/\/api\/bean\/square\/silverBean\/task\/get\? url script-request-header Sunert/Task/lkyl.js
 
 # 电视家 (By @Macsuny)
 http:\/\/act\.gaoqingdianshi\.com\/\/api\/v4\/sign\/signin\?accelerate=0&ext=0&ticket= url script-request-header nzw9314/Task/dianshijia.js
